# brainvisa_freesurfer

./: CMakeLists.txt  README.md  freesurfer_plugin.bcg  project_info.cmake
brainvisa/toolboxes/freesurfer/: freesurfer.minf  freesurfer.py  initialization.py
brainvisa/toolboxes/freesurfer/processes/: category_documentation.minf  freeSurferPipelineCompleteLongitudinal.py  freesurferBrainvisaPipeline.py  freesurferBrainvisaPipelineLight.py  freesurferCreateSubject.procdoc  freesurferCreateSubject.py  freesurferFilesExist.procdoc  freesurferFilesExist.py  freesurferPipeline.py  freesurferPipelineComplete.procdoc  freesurferPipelineComplete.py  freesurferToBrainvisaConversionPipeline.py  freesurferToBrainvisaConversionPipelineLight.py  freesurfer_qc_table.procdoc  freesurfer_qc_table.py  freesurfer_qt_table.py
brainvisa/toolboxes/freesurfer/scripts/: runFreesurferCommand.sh
brainvisa/toolboxes/freesurfer/types/: freesurferShared_types.py  (+1 more)
cmake/: freesurfer_plugin-config.cmake.in
python/brainvisa/configuration/: freesurfer_configuration.py
python/freesurfer/: GiftiToBrainvisa.py  average_mesh.py  brainvisaFreesurfer.py  concatenate_textures.py  freesurferMeshToAimsMesh.py  freesurferTexture2Tex.py  fs_hierarchy.py  get_cerebellum.py  giiToTex.py  ico100_7.gii  ico100_7.mesh  normalizeMesh.py  regularizeMeshFromIsin.py  regularizeParcelTexture.py  regularizeSphericalMesh_hack4.py  regularizeTexture.py  setAnatTransformation.py  surf2surf_mesh.py  tio.py
scripts/: runFreesurferCommand.sh
soma-dev/: soma-recipe.yaml
soma-env/: soma-env-recipe.yaml
(+84 files in other folders)
